# WazuhFasAPI

./: CODEX_WAZUH_BOOTSTRAP_API_SPEC.md  README.md
wazuh-bootstrap-api/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
wazuh-bootstrap-api/app/: __init__.py  main.py
wazuh-bootstrap-api/app/api/: __init__.py  dependencies.py
wazuh-bootstrap-api/app/clients/: __init__.py  wazuh.py
wazuh-bootstrap-api/app/core/: cache.py  config.py  logging.py  security.py
wazuh-bootstrap-api/app/models/: agent.py  common.py  group.py  health.py  manifest.py
wazuh-bootstrap-api/app/services/: bootstrap.py  wazuh_data.py
wazuh-bootstrap-api/deploy/env/: wazuh-bootstrap-api.env.example
wazuh-bootstrap-api/deploy/gpo/: Install-WazuhAgent.ps1  Test-WazuhGpoReadiness.ps1  WazuhAgentGpo.config.example.json
wazuh-bootstrap-api/deploy/logrotate/: wazuh-bootstrap-api
wazuh-bootstrap-api/deploy/nginx/: wazuh-bootstrap-api.conf  wazuh-bootstrap-proxy-headers.conf
wazuh-bootstrap-api/deploy/systemd/: wazuh-bootstrap-api.service
wazuh-bootstrap-api/docs/: API.md  DEPLOYMENT.md  GPO-CONSUMER.md  GPO-DEPLOYMENT.md  GPO-TESTING.md  SECURITY.md  WAZUH-RBAC.md
wazuh-bootstrap-api/scripts/: audit-wazuh-endpoints.sh  calculate-msi-sha256.sh  check-wazuh-enrollment.sh  create-production-env.py  generate-api-keys.py  install.sh  smoke-test.sh  uninstall.sh  validate-config.py
wazuh-bootstrap-api/tests/: conftest.py
wazuh-bootstrap-api/tests/integration/: test_agent_lookup.py  test_agents_admin.py  test_groups_admin.py  test_health.py  test_manifest.py
(+14 files in other folders)
