[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wazuh-bootstrap-api"
version = "1.0.0"
description = "Secure read-only bootstrap API for Wazuh-managed Windows agents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "packaging==25.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyJWT==2.10.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "respx==0.22.0",
  "ruff==0.12.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["jwt.*"]
ignore_missing_imports = true
